--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,191 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    color: rgb(102, 103, 103);
+    font-family:'Times New Roman', Times, serif;
+}
+hr{
+    margin: 0px 20px;
+}
+.main-body{
+    background-color: rgba(69, 2, 69, 0.997);
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    position: relative;
+        background-color: #3bb78f;
+        background-image: linear-gradient(315deg,
+                        #3bb78f 0%, #0bab64 74%);
+}
+.main{
+  background-color: aliceblue;
+  width: 40%;
+  height: 70vh;
+  border-radius: 10%;
+}
+.heading{
+    background-color: rgb(250, 250, 250);
+    height: 80px;
+    margin: 20px;
+    display: grid;
+    place-items: center;
+    margin-bottom: 30px;
+    position: sticky;
+}
+.accounts{
+    overflow-y: scroll;
+    height: 70%;
+    text-decoration: none;
+}
+.details{
+    display: flex;
+    margin: 10px;
+}
+p{
+    text-decoration: dotted;
+}
+.details img{
+    border-radius: 50%;
+    height:50px;
+    width: 50px;
+    margin: 0px 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+/* Header section */
+.main-pages{
+    display: flex;
+}
+.main-header{
+    width: 30vh;
+    border-radius: 50px;
+    height: 80vh;
+    background-color: rgb(88,65,200);
+    margin: 40px;
+    margin-top: 60px;
+    display: grid;
+    place-items: center;
+}
+.header h3{
+    color: rgb(195, 195, 195);
+    line-height: 50px;
+    cursor: pointer;
+}
+.comming-main{
+    background-color:transparent;
+    height: 80vh;
+    width: 70%;
+    border-radius: 10px;
+    margin-top: 60px;
+}
+.comming-header{
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px 40px;
+    cursor: pointer;
+}
+.comming-main h1{
+    font-size: 60px;
+    display: grid;
+    place-items: center;
+    margin-top: 15%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Profile page css......... */
+
+.main-data{
+    background-color: transparent;
+    margin: 30px 150px;
+    width: 90%;
+    height: 80%;
+    display: flex;
+}
+.main-data hr{
+    margin: 20px;
+    color: black;
+}
+.profile-data img{
+    border-radius: 50%;
+    height:150px;
+    width: 150px;
+    margin: 5px 30px;
+}
+.profile-data p{
+    display: grid;
+    place-items: center;
+    color: black;
+}
+.more-data{
+    margin: 10px;
+}
+.profile-data h4{
+    color: black;
+}
+.profile-data h2{
+    display: grid;
+    place-items: center;
+}
+.location-data{
+    margin: 10px;
+}
+.location-data h4{
+    color: black;
+}
+iframe{
+    margin: 10px;
+    height: 60%;
+    width: 60vh;
+    border: 0;
+}
+
+
+/* Signout component............... */
+
+.main-singout{
+    width: 35vh;
+    height: auto;
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    right: 5px;
+    margin: 70px;
+    border-radius: 10px;
+    border: solid 2px;
+    top: 70px;
+    /* visibility: hidden; */
+}
+.details-signout{
+    margin: 5px 60px;
+    padding: 5px;
+}
+.details-signout img{
+    border-radius: 50%;
+    height:50px;
+    width: 50px;
+    margin: 0px 30px;
+}
+.main-singout1 :nth-child(5){
+    display: flex;
+    margin: 5px -20px;
+}
+.main-singout2 :nth-child(5){
+    display: flex;
+    margin: 5px -20px;
+}
+button{
+    background-color: #ea0d01; /* Green */
+    border: none;
+    border-radius: 10px;
+    color: white;
+    padding: 10px 22px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 10px;
+    margin: 2px 0px;
+    cursor: pointer;
+    margin: 5px 90px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
